--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node src/google-calendar-api.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^17.2.2",
     "express": "^4.18.2",
-    "googleapis": "^133.0.0",
-    "body-parser": "^1.20.2"
+    "googleapis": "^133.0.0"
   }
 }
